test/bad/sample52.dave
// Failed function definition
int hello() {
    print ("Hello World!");
	return "string";
}
int main() {
    hello();
    hello();
}